--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,16 @@
 {
   "name": "Scanlist Market",
   "short_name": "Scanlist",
-  "description": "Seu carrinho de compras inteligente com memória e histórico.",
-  "start_url": "index.html",
+  "start_url": "login.html",
   "display": "standalone",
-  "background_color": "#d40000",
+  "background_color": "#ffffff",
   "theme_color": "#d40000",
   "icons": [
     {
-      "src": "logo-white.png",
-      "sizes": "192x192",
+      "src": "logo-splash.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    },
-    {
-      "src": "logo-white.png",
-      "sizes": "512x512",
-      "type": "image/png"
     }
   ]
 }
